--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div class="row">
                         <div class="col-3">
                             <div class="about-profiles__block">
-                                <img src="" alt="" class="about-profiles__photo">
+                                <!-- <img src="" alt="" class="about-profiles__photo"> -->
                                 <div class="about-profiles__name"></div>
                                 <p class="about-profiles__job text"></p>
                                 <div class="about-profiles__social">
