--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/flat.css">
-    <link rel="stylesheet" href="/css/bootstrap-grid.css">
+    <link rel="stylesheet" href="css/bootstrap-grid.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/fullpage.min.css">
-    <link rel="stylesheet" href="/css/slick.css">
+    <link rel="stylesheet" href="css/fullpage.min.css">
+    <link rel="stylesheet" href="css/slick.css">
     <title>Document</title>
 </head>
 
@@ -196,9 +196,9 @@
     </script>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="/js/fullpage.min.js"></script>
-    <script src="/js/slick.min.js"></script>
-    <script src="/js/flat.js"></script>
+    <script src="js/fullpage.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/flat.js"></script>
 </body>
 
 
