--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="section">
             <div class="slick-header">
                 <div class="slick-header__item">
-                    <img src="/img/head.jpg" alt="">
+                    <img src="img/head.jpg" alt="">
                     <div class="idea d-flex">
                         <div class="idea__good">
                             <h2 class="idea__title title">GOOD IDEAS
@@ -55,10 +55,10 @@
                     </div>
                 </div>
                 <div class="slick-header__item">
-                    <img src="/img/head.jpg" alt="">
+                    <img src="img/head.jpg" alt="">
                 </div>
                 <div class="slick-header__item">
-                    <img src="/img/head.jpg" alt="">
+                    <img src="img/head.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -91,7 +91,7 @@
                         <div class="row">
                             <div class="col-lg-3 col-md-6">
                                 <div class="item-service__block">
-                                    <img src="../img/service/lightball.png" alt="lightball">
+                                    <img src="img/service/lightball.png" alt="lightball">
                                     <h3 class="item-service__subtitle subtitle">Researching</h3>
                                     <p class="item-service__text text">Praesent interdum blandit quam. Asunt in anim
                                         uis
@@ -102,7 +102,7 @@
 
                             <div class="col-lg-3 col-md-6">
                                 <div class="item-service__block">
-                                    <img src="../img/service/magik.png" alt="Magick Stick">
+                                    <img src="img/service/magik.png" alt="Magick Stick">
                                     <h3 class="item-service__subtitle subtitle">DESIGN</h3>
                                     <p class="item-service__text text">Praesent interdum blandit quam. Asunt in anim
                                         uis
@@ -112,7 +112,7 @@
 
                             <div class="col-lg-3 col-md-6">
                                 <div class="item-service__block">
-                                    <img src="../img/service/giars.png" alt="Giars">
+                                    <img src="img/service/giars.png" alt="Giars">
                                     <h3 class="item-service__subtitle subtitle">Development</h3>
                                     <p class="item-service__text text">Praesent interdum blandit quam. Asunt in anim
                                         uis
@@ -122,7 +122,7 @@
 
                             <div class="col-lg-3 col-md-6">
                                 <div class="item-service__block">
-                                    <img src="../img/service/rocket.png" alt="Rocket">
+                                    <img src="img/service/rocket.png" alt="Rocket">
                                     <h3 class="item-service__subtitle subtitle">launch</h3>
                                     <p class="item-service__text text">Praesent interdum blandit quam. Asunt in anim
                                         uis
