--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="inner d-flex align-items-center justify-content-between">
                 <div class="logo">
-                    <img src="../img/logo.png" alt="acnostia">
+                    <img src="img/logo.png" alt="acnostia">
                 </div>
 
                 <nav class="nav d-flex" id="nav">
