--- a/index.html
+++ b/index.html
@@ -38,30 +38,29 @@
     <div id="fullpage">
 
 
-        <div class="section">
-            <div class="slick-header">
-                <div class="slick-header__item">
-                    <img src="img/head.jpg" alt="">
-                    <div class="idea d-flex">
-                        <div class="idea__good">
-                            <h2 class="idea__title title">GOOD IDEAS
-                                <span>comes</span>
-                            </h2>
-                        </div>
+        <div class="section slick-header">
+            <div class=" slick-header__item">
+                <img src="img/head.jpg" alt="">
+                <div class="idea d-flex">
+                    <div class="idea__good">
+                        <h2 class="idea__title title">GOOD IDEAS
+                            <span>comes</span>
+                        </h2>
+                    </div>
 
-                        <div class="idea__first">
-                            <h1 class="idea__bigtitle">first</h1>
-                        </div>
+                    <div class="idea__first">
+                        <h1 class="idea__bigtitle">first</h1>
                     </div>
                 </div>
-                <div class="slick-header__item">
-                    <img src="img/head.jpg" alt="">
-                </div>
-                <div class="slick-header__item">
-                    <img src="img/head.jpg" alt="">
-                </div>
+            </div>
+            <div class="slick-header__item">
+                <img src="img/head.jpg" alt="">
+            </div>
+            <div class="slick-header__item">
+                <img src="img/head.jpg" alt="">
             </div>
         </div>
+
 
 
         <section class="section services">
@@ -150,7 +149,7 @@
                                 sapien. Curabitur posuere lectus aliquet erat rutrum sollicitudin. In enim diam,
                                 ullamcorper quis libero et, ultricies commodo est. Quisque at ante vitae justo fermentum
                                 viverra ac eu justo. Ut luctus imperdiet lacus, eget laoreet erat posuere quis.</p>
-                            <button href="" class="about__btn">Meet the team</button>
+                            <button href="#" class="about__btn">Meet the team</button>
                         </div>
                     </div>
                 </div>
