--- a/index.html
+++ b/index.html
@@ -47,6 +47,51 @@
         </div>
     </header>
 
+    <div class="intro">
+        <div class="slick-top">
+            <div class="slick-top__item">
+                <div class="container">
+                    <div class="intro__content">
+                        <h1 class="intro__simple">Simple & mordern</h1>
+                        <div class="intro__world">We make the world's beautiful every day</div>
+                    </div>
+                </div>
+            </div>
+            <div class="slick-top__item">
+                <div class="container">
+                    <div class="intro__content">
+                        <h1 class="intro__simple">Simple & mordern</h1>
+                        <div class="intro__world">We make the world's beautiful every day</div>
+                    </div>
+                </div>
+            </div>
+            <div class="slick-top__item">
+                <div class="container">
+                    <div class="intro__content">
+                        <h1 class="intro__simple">Simple & mordern</h1>
+                        <div class="intro__world">We make the world's beautiful every day</div>
+                    </div>
+                </div>
+            </div>
+            <div class="slick-top__item">
+                <div class="container">
+                    <div class="intro__content">
+                        <h1 class="intro__simple">Simple & mordern</h1>
+                        <div class="intro__world">We make the world's beautiful every day</div>
+                    </div>
+                </div>
+            </div>
+            <div class="slick-top__item">
+                <div class="container">
+                    <div class="intro__content">
+                        <h1 class="intro__simple">Simple & mordern</h1>
+                        <div class="intro__world">We make the world's beautiful every day</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <section class="services" id="serv">
         <div class="container">
