--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <div class="about__info-block">
                             <div class="about__info-photo">
-                                <img src="/img/about/User.png" alt="" class="about-profiles__photo">
+                                <img src="img/about/User.png" alt="" class="about-profiles__photo">
                             </div>
                             <div class="about__info-name">Anton Petrov</div>
                             <p class="about__info-job">General manager</p>
@@ -307,7 +307,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
-                                <img src="/img/work/elit.png" alt="">
+                                <img src="img/work/elit.png" alt="">
                             </div>
                             <div class="work__pictures-name">Aenean a elit</div>
                         </div>
@@ -316,7 +316,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
-                                <img src="/img/work/aliquam.jpg" alt="">
+                                <img src="img/work/aliquam.jpg" alt="">
                             </div>
                             <div class="work__pictures-name">Aliquam </div>
                         </div>
@@ -325,7 +325,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
-                                <img src="/img/work/libero.png" alt="">
+                                <img src="img/work/libero.png" alt="">
                             </div>
                             <div class="work__pictures-name">Suspendisse libero</div>
                         </div>
@@ -334,7 +334,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
-                                <img src="/img/work/fringilla.png" alt="">
+                                <img src="img/work/fringilla.png" alt="">
                             </div>
                             <div class="work__pictures-name">Maecenas fringilla</div>
                         </div>
@@ -343,7 +343,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
-                                <img src="/img/work/vehicula.png" alt="">
+                                <img src="img/work/vehicula.png" alt="">
                             </div>
                             <div class="work__pictures-name">Donec vehicula</div>
                         </div>
@@ -352,7 +352,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
-                                <img src="/img/work/sapien.png" alt="">
+                                <img src="img/work/sapien.png" alt="">
                             </div>
                             <div class="work__pictures-name">Ut et sapien</div>
                         </div>
@@ -361,7 +361,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
-                                <img src="/img/work/malesuada.png" alt="">
+                                <img src="img/work/malesuada.png" alt="">
                             </div>
                             <div class="work__pictures-name">quis malesuada</div>
                         </div>
@@ -370,7 +370,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
-                                <img src="/img/work/vehicula.png" alt="">
+                                <img src="img/work/vehicula.png" alt="">
                             </div>
                             <div class="work__pictures-name">Vestibulum ante</div>
                         </div>
