--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="header__wrapper">
                 <div class="header__logo">
-                    <img src="/img/logo.png" alt="monticello">
+                    <img src="img/logo.png" alt="monticello">
                 </div>
 
                 <nav class="nav">
