--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <div class="about__info-block">
                             <div class="about__info-photo">
-                                <img src="/img/about/User.png" alt="" class="about-profiles__photo">
+                                <img src="img/about/User.png" alt="" class="about-profiles__photo">
                             </div>
                             <div class="about__info-name">Kirl Donchec</div>
                             <p class="about__info-job">Design Master</p>
@@ -236,7 +236,7 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <div class="about__info-block">
                             <div class="about__info-photo">
-                                <img src="/img/about/User.png" alt="" class="about-profiles__photo">
+                                <img src="img/about/User.png" alt="" class="about-profiles__photo">
                             </div>
                             <div class="about__info-name">Ilian Bonev</div>
                             <p class="about__info-job">Developer Ninja</p>
@@ -260,7 +260,7 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <div class="about__info-block">
                             <div class="about__info-photo">
-                                <img src="/img/about/User.png" alt="" class="about-profiles__photo">
+                                <img src="img/about/User.png" alt="" class="about-profiles__photo">
                             </div>
                             <div class="about__info-name">Doni Stamov</div>
                             <p class="about__info-job">SEO guru</p>
