--- a/index.html
+++ b/index.html
@@ -28,17 +28,15 @@
                 </div>
 
                 <nav class="nav">
-                    <div class="nav__list">
-                        <a href="#" class="nav__link">Home</a>
-                        <a href="#serv" class="nav__link">Service</a>
-                        <a href="#about" class="nav__link">About</a>
-                        <a href="#work" class="nav__link">Work</a>
-                        <a href="#contact" class="nav__link">Contacts</a>
-                    </div>
+                    <a href="#" class="nav__link">Home</a>
+                    <a href="#serv" class="nav__link">Service</a>
+                    <a href="#about" class="nav__link">About</a>
+                    <a href="#work" class="nav__link">Work</a>
+                    <a href="#contact" class="nav__link">Contacts</a>
                 </nav>
 
 
-                <div class="header__burger">
+                <div class="header__burger d-lg-none d-block">
                     <span></span>
                 </div>
 
@@ -50,43 +48,48 @@
     <div class="intro">
         <div class="slick-top">
             <div class="slick-top__item">
-                <div class="container">
-                    <div class="intro__content">
-                        <h1 class="intro__simple">Simple & mordern</h1>
-                        <div class="intro__world">We make the world's beautiful every day</div>
-                    </div>
+                <div class="intro__photo">
+                    <img src="img/head.jpg" alt="head">
+                </div>
+                <div class="intro__content">
+                    <h1 class="intro__simple">Simple & mordern</h1>
+                    <div class="intro__world">We make the world's beautiful every day</div>
                 </div>
             </div>
             <div class="slick-top__item">
-                <div class="container">
-                    <div class="intro__content">
-                        <h1 class="intro__simple">Simple & mordern</h1>
-                        <div class="intro__world">We make the world's beautiful every day</div>
-                    </div>
+                <div class="intro__photo">
+                    <img src="/img/head.jpg" alt="head">
+                </div>
+                <div class="intro__content">
+                    <h1 class="intro__simple">Simple & mordern</h1>
+                    <div class="intro__world">We make the world's beautiful every day</div>
                 </div>
             </div>
             <div class="slick-top__item">
-                <div class="container">
-                    <div class="intro__content">
-                        <h1 class="intro__simple">Simple & mordern</h1>
-                        <div class="intro__world">We make the world's beautiful every day</div>
-                    </div>
+                <div class="intro__photo">
+                    <img src="/img/head.jpg" alt="head">
+                </div>
+                <div class="intro__content">
+                    <h1 class="intro__simple">Simple & mordern</h1>
+                    <div class="intro__world">We make the world's beautiful every day</div>
                 </div>
             </div>
             <div class="slick-top__item">
-                <div class="container">
-                    <div class="intro__content">
-                        <h1 class="intro__simple">Simple & mordern</h1>
-                        <div class="intro__world">We make the world's beautiful every day</div>
-                    </div>
+                <div class="intro__photo">
+                    <img src="/img/head.jpg" alt="head">
+                </div>
+                <div class="intro__content">
+                    <h1 class="intro__simple">Simple & mordern</h1>
+                    <div class="intro__world">We make the world's beautiful every day</div>
                 </div>
             </div>
             <div class="slick-top__item">
-                <div class="container">
-                    <div class="intro__content">
-                        <h1 class="intro__simple">Simple & mordern</h1>
-                        <div class="intro__world">We make the world's beautiful every day</div>
-                    </div>
+                <div class="intro__photo">
+                    <img src="/img/head.jpg" alt="head">
+                </div>
+                <div class="intro__content">
+                    <h1 class="intro__simple">Simple & mordern</h1>
+                    <div class="intro__world">We make the world's beautiful every day</div>
                 </div>
             </div>
         </div>
@@ -302,9 +305,19 @@
                 </div>
             </div>
 
+            <div class="work__portfolio d-block d-lg-flex  justify-content-between align-items-center">
+                <div class="work__portfolio-name">Portfolio</div>
+                <div class="work__portfolio-menu d-flex">
+                    <a href="#" data-filter=".all" class="work__portfolio-link active">All</a>
+                    <a href="#" data-filter=".photo" class="work__portfolio-link">Photography</a>
+                    <a href="#" data-filter=".logo" class="work__portfolio-link">Logo design</a>
+                    <a href="#" data-filter=".web" class="work__portfolio-link">Web design</a>
+                </div>
+            </div>
+
             <div class="work__pictures">
                 <div class="row">
-                    <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="col-lg-3 col-md-4 col-sm-6 photo all ret__item">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
                                 <img src="img/work/elit.png" alt="">
@@ -313,7 +326,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="col-lg-3 col-md-4 col-sm-6 photo all ret__item">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
                                 <img src="img/work/aliquam.jpg" alt="">
@@ -322,8 +335,8 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-4 col-sm-6">
-                        <div class="work__pictures-block">
+                    <div class="col-lg-3 col-md-4 col-sm-6 photo all ret__item">
+                        <div class="work__pictures-block photo all">
                             <div class="work__pictures-photo">
                                 <img src="img/work/libero.png" alt="">
                             </div>
@@ -331,7 +344,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="col-lg-3 col-md-4 col-sm-6 logo all ret__item">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
                                 <img src="img/work/fringilla.png" alt="">
@@ -340,7 +353,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="col-lg-3 col-md-4 col-sm-6 logo all ret__item">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
                                 <img src="img/work/vehicula.png" alt="">
@@ -349,7 +362,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="col-lg-3 col-md-4 col-sm-6 logo all ret__item">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
                                 <img src="img/work/sapien.png" alt="">
@@ -358,7 +371,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="col-lg-3 col-md-4 col-sm-6 web all ret__item">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
                                 <img src="img/work/malesuada.png" alt="">
@@ -367,7 +380,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="col-lg-3 col-md-4 col-sm-6 web all ret__item">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
                                 <img src="img/work/vehicula.png" alt="">
@@ -496,6 +509,7 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQDEK_bp8E3TJz1Sg1VMqF7jn8J3Z7Haw&callback=initMap"
         async defer></script>
     <script src="js/flat.js"></script>
