--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
 
                 <nav class="nav">
-                    <a href="#" class="nav__link">Home</a>
+                    <a href="#intro" class="nav__link">Home</a>
                     <a href="#serv" class="nav__link">Service</a>
                     <a href="#about" class="nav__link">About</a>
                     <a href="#work" class="nav__link">Work</a>
@@ -45,7 +45,7 @@
         </div>
     </header>
 
-    <div class="intro">
+    <div class="intro" id="intro">
         <div class="slick-top">
             <div class="slick-top__item">
                 <div class="intro__photo">
@@ -469,16 +469,16 @@
     <footer class="footer">
         <div class="container">
             <div class="footer__content d-flex justify-content-center">
-                <div class="footer__content-social">
+                <div class="footer__content-social footer__content-social--fac">
                     <i class="fab fa-facebook-f"></i>
                 </div>
-                <div class="footer__content-social">
+                <div class="footer__content-social footer__content-social--twit">
                     <i class="fab fa-twitter"></i>
                 </div>
-                <div class="footer__content-social">
+                <div class="footer__content-social footer__content-social--goog">
                     <i class="fab fa-google-plus-g"></i>
                 </div>
-                <div class="footer__content-social">
+                <div class="footer__content-social footer__content-social--link">
                     <i class="fab fa-linkedin-in"></i>
                 </div>
             </div>
