--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             <div class="slick-top__item">
                 <div class="intro__photo">
-                    <img src="/img/head.jpg" alt="head">
+                    <img src="img/head.jpg" alt="head">
                 </div>
                 <div class="intro__content">
                     <h1 class="intro__simple">Simple & mordern</h1>
@@ -67,7 +67,7 @@
             </div>
             <div class="slick-top__item">
                 <div class="intro__photo">
-                    <img src="/img/head.jpg" alt="head">
+                    <img src="img/head.jpg" alt="head">
                 </div>
                 <div class="intro__content">
                     <h1 class="intro__simple">Simple & mordern</h1>
@@ -76,7 +76,7 @@
             </div>
             <div class="slick-top__item">
                 <div class="intro__photo">
-                    <img src="/img/head.jpg" alt="head">
+                    <img src="img/head.jpg" alt="head">
                 </div>
                 <div class="intro__content">
                     <h1 class="intro__simple">Simple & mordern</h1>
@@ -85,7 +85,7 @@
             </div>
             <div class="slick-top__item">
                 <div class="intro__photo">
-                    <img src="/img/head.jpg" alt="head">
+                    <img src="img/head.jpg" alt="head">
                 </div>
                 <div class="intro__content">
                     <h1 class="intro__simple">Simple & mordern</h1>
@@ -94,7 +94,6 @@
             </div>
         </div>
     </div>
-
 
     <section class="services" id="serv">
         <div class="container">
