--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <!------------------------------------- favicon ---------------------------->
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
     <link rel="manifest" href="img/favicon/site.webmanifest">
-    <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <!------------------------------------- /favicon ---------------------------->
 
     <link rel="stylesheet" href="css/flat.css">
     <link rel="stylesheet" href="css/bootstrap-grid.css">
@@ -24,12 +22,6 @@
 </head>
 
 <body>
-
-
-
-
-
-
 
     <header class="header">
         <div class="container">
@@ -171,10 +163,7 @@
                             </div>
                         </div>
                     </div>
-                    <!------------------------ row----------------------->
-
                 </div>
-                <!------------------------ item-service----------------------->
             </div>
         </div>
     </section>
@@ -191,7 +180,7 @@
                             ullamcorper quis libero et, ultricies commodo est. Quisque at ante vitae justo
                             fermentum
                             viverra ac eu justo. Ut luctus imperdiet lacus, eget laoreet erat posuere quis.</p>
-                        <button href="#" class="about__btn btn">Meet the team</button>
+                        <button class="about__btn btn">Meet the team</button>
                     </div>
                 </div>
             </div>
@@ -201,7 +190,7 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <div class="about__info-block">
                             <div class="about__info-photo">
-                                <img src="img/about/User.png" alt="" class="about-profiles__photo">
+                                <img src="img/about/User.png" alt="Person" class="about-profiles__photo">
                             </div>
                             <div class="about__info-name">Anton Petrov</div>
                             <p class="about__info-job">General manager</p>
@@ -225,7 +214,7 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <div class="about__info-block">
                             <div class="about__info-photo">
-                                <img src="img/about/User.png" alt="" class="about-profiles__photo">
+                                <img src="img/about/User.png" alt="Person" class="about-profiles__photo">
                             </div>
                             <div class="about__info-name">Kirl Donchec</div>
                             <p class="about__info-job">Design Master</p>
@@ -249,7 +238,7 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <div class="about__info-block">
                             <div class="about__info-photo">
-                                <img src="img/about/User.png" alt="" class="about-profiles__photo">
+                                <img src="img/about/User.png" alt="Person" class="about-profiles__photo">
                             </div>
                             <div class="about__info-name">Ilian Bonev</div>
                             <p class="about__info-job">Developer Ninja</p>
@@ -273,7 +262,7 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <div class="about__info-block">
                             <div class="about__info-photo">
-                                <img src="img/about/User.png" alt="" class="about-profiles__photo">
+                                <img src="img/about/User.png" alt="Person" class="about-profiles__photo">
                             </div>
                             <div class="about__info-name">Doni Stamov</div>
                             <p class="about__info-job">SEO guru</p>
@@ -330,7 +319,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 photo all ret__item">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
-                                <img src="img/work/elit.png" alt="">
+                                <img src="img/work/elit.png" alt="nature">
                             </div>
                             <div class="work__pictures-name">Aenean a elit</div>
                         </div>
@@ -339,7 +328,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 photo all ret__item">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
-                                <img src="img/work/aliquam.jpg" alt="">
+                                <img src="img/work/aliquam.jpg" alt="nature">
                             </div>
                             <div class="work__pictures-name">Aliquam </div>
                         </div>
@@ -348,7 +337,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 photo all ret__item">
                         <div class="work__pictures-block photo all">
                             <div class="work__pictures-photo">
-                                <img src="img/work/libero.png" alt="">
+                                <img src="img/work/libero.png" alt="nature">
                             </div>
                             <div class="work__pictures-name">Suspendisse libero</div>
                         </div>
@@ -357,7 +346,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 logo all ret__item">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
-                                <img src="img/work/fringilla.png" alt="">
+                                <img src="img/work/fringilla.png" alt="nature">
                             </div>
                             <div class="work__pictures-name">Maecenas fringilla</div>
                         </div>
@@ -366,7 +355,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 logo all ret__item">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
-                                <img src="img/work/vehicula.png" alt="">
+                                <img src="img/work/vehicula.png" alt="nature">
                             </div>
                             <div class="work__pictures-name">Donec vehicula</div>
                         </div>
@@ -375,7 +364,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 logo all ret__item">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
-                                <img src="img/work/sapien.png" alt="">
+                                <img src="img/work/sapien.png" alt="nature">
                             </div>
                             <div class="work__pictures-name">Ut et sapien</div>
                         </div>
@@ -384,7 +373,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 web all ret__item">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
-                                <img src="img/work/malesuada.png" alt="">
+                                <img src="img/work/malesuada.png" alt="nature">
                             </div>
                             <div class="work__pictures-name">quis malesuada</div>
                         </div>
@@ -393,7 +382,7 @@
                     <div class="col-lg-3 col-md-4 col-sm-6 web all ret__item">
                         <div class="work__pictures-block">
                             <div class="work__pictures-photo">
-                                <img src="img/work/vehicula.png" alt="">
+                                <img src="img/work/vehicula.png" alt="nature">
                             </div>
                             <div class="work__pictures-name">Vestibulum ante</div>
                         </div>
@@ -401,7 +390,6 @@
 
                 </div>
             </div>
-
         </div>
     </section>
 
@@ -436,10 +424,10 @@
 
                                 <div class="contact__info-networks">
                                     <div class="contact__info-phone">Phone:
-                                        <a href="tel:+44 555 555 555">+44 555 555 555</a>
+                                        <a href="tel:+4455555555">+44 555 555 555</a>
                                     </div>
                                     <div class="contact__info-fax">Fax:
-                                        <a href="tel:+44 556 555 555">+44 556 555 555</a>
+                                        <a href="tel:+44556555555">+44 556 555 555</a>
                                     </div>
                                     <div class="contact__info-mail">E-mail:
                                         <a href="mailto:info@acrostia.com">info@acrostia.com</a>
@@ -447,17 +435,12 @@
                                     <div class="contact__info-skype">Skype:
                                         <a href="#">Ac0stia</a>
                                     </div>
-
                                 </div>
                             </div>
 
                             <div class="contact__info-map" id="map" style="width: 260px; height: 220px;">
                             </div>
                         </div>
-
-
-
-
                     </div>
 
                     <div class="col-12 col-sm-6">
@@ -494,20 +477,6 @@
             </div>
         </div>
     </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
