--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/bootstrap-grid.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/slick.css">
-    <title>Document</title>
+    <title>Acnostia</title>
 </head>
 
 <body>
